# agent-trace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REFERENCES.md  ROADMAP.md  demo_singleton.sh  pyproject.toml  test_run.sh
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  FAQ.md  README.md  TESTING.md  root_span_analysis_complete.md  root_span_debug.md  trace_export_analysis.md
scripts/: start.sh
src/agent_trace/: __init__.py  __main__.py  cli.py
src/agent_trace/autostart/: __init__.py
src/agent_trace/autostart/linux/: kimi-monitor.service.template
src/agent_trace/autostart/macos/: com.kimicode.monitor.plist.template
src/agent_trace/autostart/windows/: install.bat.template  uninstall.bat.template
src/agent_trace/core/: __init__.py  dedup.py  monitor.py  persistent_offset.py  session_state.py  trace_context.py
src/agent_trace/handlers/: __init__.py  event_handler.py
src/agent_trace/parsers/: __init__.py  jsonl_reader.py  wire_parser.py
src/agent_trace/utils/: __init__.py  config.py  logging_config.py  retry.py  singleton.py
